--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <section class="score-panel">
         <ul class="stars">
           <li><i class="fa fa-star"></i></li>
-          <li><i class="fa fa-star"></i></li>
-          <li><i class="fa fa-star"></i></li>
+          <li><i class="fa fa-star second-star"></i></li>
+          <li><i class="fa fa-star third-star"></i></li>
         </ul>
 
         <span class="moves"></span> Moves
