Add timer elements

--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
         </ul>
 
         <span class="moves"></span> Moves
-
+        <!-- Timer -->
+        <div class="timer">
+          Min: <span class="minutes">00</span>
+          Sec: <span class="seconds">00</span>
+        </div>
+        
         <div class="restart">
           <i class="fa fa-repeat"></i>
         </div>
