Add timer functionality

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <span class="moves"></span> Moves
         <!-- Timer -->
         <div class="timer">
-          Min: <span class="minutes">00</span>
-          Sec: <span class="seconds">00</span>
+          Min: <span class="minutes"></span>
+          Sec: <span class="seconds"></span>
         </div>
         
         <div class="restart">
