--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <section class="score-panel">
         <ul class="stars">
-          <li><i class="fa fa-star"></i></li>
+          <li><i class="fa fa-star first-star"></i></li>
           <li><i class="fa fa-star second-star"></i></li>
           <li><i class="fa fa-star third-star"></i></li>
         </ul>
