Add play again button

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="timer-container">
               Time: <span class="timer-info"></span>
             </div>
-            <button class="close">close</button>
+            <button class="play-again-btn">Play again</button>
           </div>
         </div>
       </div>
