--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
         <div class="modal-background">
           <!-- modal content -->
           <div class="modal-content">
+            <!-- icon container -->
+            <div class="icon-container">
+              <!-- icon -->
+              <li class="icon fa fa-thumbs-o-up"></li>
+            </div>
             <!-- container for moves -->
             <div class="moves-container">
               Moves: <span class="moves-info"></span>
