--- a/index.html
+++ b/index.html
@@ -15,34 +15,38 @@
     <link rel="stylesheet" href="css/app.css" />
   </head>
   <body>
+    <!-- container -->
     <div class="container">
+      <!-- header -->
       <header>
         <h1>Matching Game</h1>
       </header>
-
+      <!-- Score panel -->
       <section class="score-panel">
+        <!-- stars -->
         <ul class="stars">
+          <!-- first star -->
           <li><i class="fa fa-star first-star"></i></li>
+          <!-- second star -->
           <li><i class="fa fa-star second-star"></i></li>
+          <!-- third star -->
           <li><i class="fa fa-star third-star"></i></li>
         </ul>
-
+        <!-- moves -->
         <span class="moves"></span> Moves
         <!-- Timer -->
         <div class="timer">
           Min: <span class="minutes"></span> Sec: <span class="seconds"></span>
         </div>
-
+        <!-- reset button -->
         <div class="restart">
           <i class="fa fa-repeat"></i>
         </div>
       </section>
-
+      <!-- deck -->
       <ul class="deck"></ul>
-
-      <!-- <button class="open">open</button> -->
       <!-- container for modal -->
-      <!-- initially the modal is closed: modal-closed  -->
+      <!-- initially the modal is closed: the class modal-closed  -->
       <div id="modal-container" class="modal-closed">
         <!-- modal background -->
         <div class="modal-background">
@@ -70,7 +74,7 @@
         </div>
       </div>
     </div>
-
+    <!-- link to js file -->
     <script src="js/app.js"></script>
   </body>
 </html>
