--- a/index.html
+++ b/index.html
@@ -24,14 +24,7 @@
       <!-- Score panel -->
       <section class="score-panel">
         <!-- stars -->
-        <ul class="stars">
-          <!-- first star -->
-          <li><i class="fa fa-star first-star"></i></li>
-          <!-- second star -->
-          <li><i class="fa fa-star second-star"></i></li>
-          <!-- third star -->
-          <li><i class="fa fa-star third-star"></i></li>
-        </ul>
+        <ul class="stars"></ul>
         <!-- moves -->
         <span class="moves"></span> Moves
         <!-- Timer -->
